config diploma on admin

--- a/decidim-conferences/config/locales/en.yml
+++ b/decidim-conferences/config/locales/en.yml
@@ -154,6 +154,7 @@ en:
           conference_admins: Conference users
           conference_invites: Invites
           conference_speakers: Speakers
+          diploma: Diploma
           info: Info
           media_links: Media Links
           moderations: Moderations
@@ -327,6 +328,10 @@ en:
               other: There has been %{count} registrations.
               zero: There has not been registrations yet.
             slug_help: 'URL slugs are used to generate the URLs that point to this conference. Only accepts letters, numbers and dashes, and must start with a letter. Example: %{url}'
+        diplomas:
+          edit:
+            save: Save
+            title: Diploma      
         invite_join_conference_mailer:
           invite:
             decline: Decline invitation '%{conference_title}'
