fix and apply requested changes

--- a/decidim-conferences/config/locales/en.yml
+++ b/decidim-conferences/config/locales/en.yml
@@ -434,7 +434,7 @@ en:
             subject: Invitation to join a conference
         send_conference_diploma_mailer:
           diploma:
-            subject: Your conference's diploma has been send
+            subject: Your conference's diploma has been sent
       models:
         conference_invite:
           fields:
