Fix proposals/emendations state (#17)
* Fix proposals/emendations state

* Test ProposalMCell proposal/emendation state

* Fix rubocop offences (forgot)

* Refactor amend proposal system spec

* Start fixing admin dashboard

* Fix admin dashboard

* Start fixing amendment form validations

* Refactor amendment form validations

Basic functionality working with redirect_to amendable_gid

* Refactor amendment form validation redirect_to

* Feature/amendments proposals on proposals withdraw (#18)

* Fix emendation withdraw

* Refactor change_proposal_state_to_withdrawn

* Fix proposals_show withdrawn translation missing

* Fix states of proposals

* Button Answer disabled if amendment

* Refactor withdraw to work with "See all withdrawn proposals"

* Check for amendments even if user is not logged in

* Amend Proposal system test

* Fix error when merging cristian/aitor branches

* Check for amendments even if user is not logged in - fixed

* Fix rubocop offences

* Fix mistake when refactoring emendation withdraw

Forgot to change withdraw_proposal.rb back to its original state.

* Add withdraw amendment test

* Fix admin dashboard

* Add red color to withdrawn state in admin manager

* Change proposal_state to resource_state

* Resolve conversations

* Feature/amendments proposals on proposals unable button (#19)

* Unable "Answer" button when the proposal is an emendation

* Fixed offenses with Rubocop

* fixed translate

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -158,6 +158,9 @@ en:
             This emendation for the %{amendable_type} %{amendable_link}
             was rejected on <strong>%{announcement_date}</strong>.<br>
             You can %{publish_as_button}.
+          withdrawn: |-
+            This emendation for the %{amendable_type} %{amendable_link}
+            has been withdrawn by the author.
       new:
         back: Back
         heading: Create your amendment
