--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -83,6 +83,7 @@ en:
             announcement: Announcement
             comments_enabled: Comments enabled
             default_registration_terms: Default registration terms
+            enable_pads_creation: Enable pads creation
             resources_permissions_enabled: Actions permissions can be set for each meeting
           step:
             announcement: Announcement
